force-app/main/default/objects/Master_Pinalty__c/Master_Pinalty__c.object-meta.xml
<CustomObject>
    <label>Master Pinalty</label>
    <nameField>
        <displayFormat>MP - {00000000}</displayFormat>
        <label>Master Pinalty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Pinalty</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>