force-app/main/default/objects/Master_Pinalty__c/fields/IDR_2__c.field-meta.xml
<CustomField>
    <fullName>IDR_2__c</fullName>
    <label>IDR 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>