force-app/main/default/objects/Master_Pinalty__c/fields/IDR__c.field-meta.xml
<CustomField>
    <fullName>IDR__c</fullName>
    <label>IDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>