force-app/main/default/objects/Master_Pinalty__c/fields/Kode__c.field-meta.xml
<CustomField>
    <fullName>Kode__c</fullName>
    <label>Kode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HONMEP</fullName>
            </value>
            <value>
                <fullName>HONMEPS</fullName>
            </value>
            <value>
                <fullName>HONPRE</fullName>
            </value>
            <value>
                <fullName>HONMPS</fullName>
            </value>
            <value>
                <fullName>HONMPSS</fullName>
            </value>
            <value>
                <fullName>HOND</fullName>
            </value>
            <value>
                <fullName>HONSPK</fullName>
            </value>
            <value>
                <fullName>HONSKPS</fullName>
            </value>
            <value>
                <fullName>HONPPK</fullName>
            </value>
            <value>
                <fullName>HONPPKS</fullName>
            </value>
            <value>
                <fullName>HONMWP</fullName>
            </value>
            <value>
                <fullName>HONMLGT</fullName>
            </value>
            <value>
                <fullName>MJK</fullName>
            </value>
            <value>
                <fullName>MSK</fullName>
            </value>
            <value>
                <fullName>MHL</fullName>
            </value>
            <value>
                <fullName>MPPT</fullName>
            </value>
            <value>
                <fullName>MPK</fullName>
            </value>
            <value>
                <fullName>MPKD</fullName>
            </value>
            <value>
                <fullName>MHP</fullName>
            </value>
            <value>
                <fullName>MPJ</fullName>
            </value>
            <value>
                <fullName>MSL</fullName>
            </value>
            <value>
                <fullName>MPKS</fullName>
            </value>
            <value>
                <fullName>MIR</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>MJKS</fullName>
            </value>
            <value>
                <fullName>MFC</fullName>
            </value>
            <value>
                <fullName>MHS</fullName>
            </value>
            <value>
                <fullName>HNMEPSA</fullName>
            </value>
            <value>
                <fullName>HNMEPSB</fullName>
            </value>
            <value>
                <fullName>HONMEPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>