force-app/main/default/objects/Master_Pinalty__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>