force-app/main/default/objects/Master_Pinalty__c/fields/Prime__c.field-meta.xml
<CustomField>
    <fullName>Prime__c</fullName>
    <label>Prime</label>
    <type>TextArea</type>
</CustomField>