force-app/main/default/objects/Master_Pinalty__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MANDIRI JAMINAN KESEHATAN</fullName>
            </value>
            <value>
                <fullName>MANDIRI SOLUSI KESEHATAN</fullName>
            </value>
            <value>
                <fullName>MANDIRI HOSPITALIFE</fullName>
            </value>
            <value>
                <fullName>MANDIRI PROTEKSI PENYAKIT TROPIS</fullName>
            </value>
            <value>
                <fullName>MANDIRI PROTEKSI KANKER</fullName>
            </value>
            <value>
                <fullName>MANDIRI PROTEKSI KANKER DINI</fullName>
            </value>
            <value>
                <fullName>MANDIRI HEART PROTECTION</fullName>
            </value>
            <value>
                <fullName>MANDIRI PROTEKSI JANTUNG</fullName>
            </value>
            <value>
                <fullName>MANDIRI SECURE LIFE</fullName>
            </value>
            <value>
                <fullName>MANDIRI PROTEKSI KESEHATAN SYARIAH</fullName>
            </value>
            <value>
                <fullName>MANDIRI INCOME REPLACEMENT</fullName>
            </value>
            <value>
                <fullName>MANDIRI SECURE PLAN</fullName>
            </value>
            <value>
                <fullName>MANDIRI JAMINAN KESEHATAN SYARIAH</fullName>
            </value>
            <value>
                <fullName>MANDIR FAMILY CARE</fullName>
            </value>
            <value>
                <fullName>MANDIRI HOSPITAL SAVING</fullName>
            </value>
            <value>
                <fullName>Mandiri Elite Plan</fullName>
            </value>
            <value>
                <fullName>Mandiri Investasi Prestise</fullName>
            </value>
            <value>
                <fullName>Mandiri Perlindungan Sejahtera</fullName>
            </value>
            <value>
                <fullName>Mandiri Wealth Plan (from basic account balance)</fullName>
            </value>
            <value>
                <fullName>Mandiri Legacy Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>