force-app/main/default/objects/Master_Pinalty__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <type>TextArea</type>
</CustomField>