force-app/main/default/objects/Master_Pinalty__c/fields/sub_type__c.field-meta.xml
<CustomField>
    <fullName>sub_type__c</fullName>
    <label>sub type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finalti Surrender/Withdrawal</fullName>
            </value>
            <value>
                <fullName>Finalti/Surrender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>