force-app/main/default/objects/Master_Pinalty__c/fields/Type_Product__c.field-meta.xml
<CustomField>
    <fullName>Type_Product__c</fullName>
    <label>Type Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCB</fullName>
            </value>
            <value>
                <fullName>Finalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>