force-app/main/default/objects/Master_Pinalty__c/fields/USD_2__c.field-meta.xml
<CustomField>
    <fullName>USD_2__c</fullName>
    <label>USD 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>