force-app/main/default/objects/Master_Pinalty__c/fields/USD__c.field-meta.xml
<CustomField>
    <fullName>USD__c</fullName>
    <label>USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>