force-app/main/default/objects/Master_Pinalty__c/fields/Variabel__c.field-meta.xml
<CustomField>
    <fullName>Variabel__c</fullName>
    <label>Variabel</label>
    <type>TextArea</type>
</CustomField>